--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,12 @@
 server:
   port: 80
+  salt: 45a1d914886d4a92b6835a181b2a20d8
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/ayundao?serverTimezone=CTT&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
     username: root
-    password: root
+    password: 123456
 
   redis:
     port: 6379
@@ -40,3 +41,7 @@ spring:
     suffix: .html
   profiles:
     active: dev
+
+author:
+  normal:
+    - /login
